clean ventilation errors (#189)
Signed-off-by: Etienne LESOT <etienne.lesot@rte-france.com>